# Y2CL_ProjectA_Template

./: .gitignore  README.md  __init__.py  lenses.py  pyproject.toml  setup_workspace.py
.github/classroom/: autograding.json  linting.json
.github/workflows/: classroom.yml
raytracer/: __init__.py  analysis.py  elements.py  lenses.py  physics.py  rays.py
raytracer/_utils/: __init__.py  decorators.py
tests/: __init__.py  conftest.py  fixtures.py  test_code_quality.py  test_fine_details.py  test_important_details.py  test_ray_class.py  test_raytracer.py  test_tasks.py  utils.py
tests/plots/: Task11  Task12  Task13  Task15  task10  task11  task12  task13  task14  task14cp  task14pc  task15  task16  task9
