[project]
name = "y2cl_projecta"
version = "0.1.0"
description = "Imperial Year 2 Physics Computing Lab."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0"
authors = [
  {name = "Alexander Richards", email = "a.richards@imperial.ac.uk"}
]
maintainers = [
  {name = "Alexander Richards", email = "a.richards@imperial.ac.uk"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pytest"
]

[tool.setuptools]
packages = ["raytracer"]
